# datahub-cicd

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  sync-metadata.yml
config/: example-scope.yaml  example.env
docs/: conflict-behavior.md  observability-plan.md  structured-properties-research.md
src/: client.py  deletion.py  error_classification.py  interfaces.py  logging_config.py  orchestrator.py  provenance.py  registry.py  reporting.py  retry.py  run_context.py  scope.py  urn_mapper.py  utils.py  write_strategy.py
src/cli/: export_cmd.py  sync_cmd.py
src/handlers/: __init__.py  data_products.py  domains.py  enrichment.py  glossary.py  tags.py
tests/: conftest.py  test_deletion.py  test_error_classification.py  test_logging_config.py  test_orchestrator.py  test_provenance.py  test_reporting.py  test_retry.py  test_run_context.py  test_scope.py  test_urn_mapper.py  test_utils.py  test_write_strategy.py
tests/integration/: conftest.py  seed.py  test_export.py  test_observability.py
tests/test_handlers/: test_data_products.py  test_domains.py  test_enrichment.py  test_glossary.py  test_tags.py
