[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-cicd"
version = "0.1.0"
description = "CI/CD pipeline for DataHub governance metadata"
requires-python = ">=3.11"
dependencies = [
    "acryl-datahub>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
